    * Code which decides what referenced troves need to be erased when
      collections are erased now:
        - Looks in the local database for trove references instead of
          instantiating troves to get that information
        - Batches reference checks, pin checks, and presence checks across
          troves instead of checking those for each trove individually

  o Bug Fixes:
    * --lsprof option now writes out profiling information even if an
      exception occurs for both the conary and cvc commands
    * Dependency numbers in temporary dependency checking tables no longer
      overlap dependency numbers in the persistent database
    * Dependencies with multiple flags were not marked as satisfied during
      dependency resolution passes, forcing extra work on subsequent passes

Changes in 2.0.43:
  o Internal Changes:
    * Additional information is now included when Conary receives
      corrupt changesets, to assist in diagnosing the cause of
      the changeset corruption. (CNY-2629)

  o Bug Fixes:
    * File paths from changesets are now properly normalized, and the
      rest of the code correctly handles the single-slash prefix in
      the case of installing to the main root directory. This fix
      completes the change introduced in Conary 2.0.41 and reverted
      in Conary 2.0.42, that caused tag handlers to malfunction
      when run by Conary 2.0.41. (CNY-3142)
    * Conary now puts libtool .la files in :devellib components
      by default, rather than in :lib components, for better
      multilib development environment support. (CNY-3143)
    * An internal function, mkdirChain, used to create directories,
      could be subject to a race condition on Python 2.4. This has
      been corrected. (CNY-3145)
    * The documentation for the mode= argument to several build
      actions has been improved to make it clearer to specify an
      octal number. (CNY-3146)